fix: align offices cards in Contacts

--- a/src/components/pages/Contacts/blocks/Offices/Offices.module.css
+++ b/src/components/pages/Contacts/blocks/Offices/Offices.module.css
@@ -18,7 +18,8 @@
     font-weight: 600;
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    /* gap: 30px; */
+    justify-content: space-around;
     width: 19%;
     min-height: 500px;
     min-width: 351px;
@@ -28,6 +29,9 @@
     font-size: 30px;
     font-weight: 900;
     margin-bottom: 20px;
+}
+.offices_item__address {
+    height: 90px;
 }
 @media (max-width: 1600px) {
     .container {
@@ -39,6 +43,9 @@
     }
 }
 @media (max-width: 1270px) {
+    .offices_item__address {
+    height: auto;
+    }
     .offices_item {
         width: 40%;
         min-height: 300px;
